# obsidian-mcp-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README.ru.md  codecov.yml  llms.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: vault_bench.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/linux-x64-musl/: package.json
npm/obsidian-mcp-rs/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
npm/obsidian-mcp-rs/src/: bin.ts  platform.test.ts  platform.ts
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
scripts/: prepare-release.sh
src/: error.rs  handler.rs  http.rs  lib.rs  main.rs  vault.rs
src/install/: clients.rs  mod.rs  writer.rs
src/tools/: add_tags.rs  create_directory.rs  create_note.rs  delete_note.rs  edit_note.rs  frontmatter.rs  list_vaults.rs  mod.rs  move_note.rs  periodic.rs  read_note.rs  remove_tags.rs  rename_tag.rs  search_vault.rs  vault_info.rs  wikilinks.rs
src/vault/: frontmatter.rs  info.rs  links.rs  mod.rs  patch.rs  path.rs  periodic.rs  search.rs  tags.rs  walk.rs  write.rs
tests/: mcp_stdio.rs
