[package]
name = "obsidian-mcp-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
authors = ["Vladislav Tupikin"]
description = "A fast, Rust-based MCP server for Obsidian vaults"
license = "MIT"
repository = "https://github.com/MrRefactoring/obsidian-mcp-rs"
homepage = "https://github.com/MrRefactoring/obsidian-mcp-rs"
readme = "README.md"
keywords = ["obsidian", "mcp", "notes", "vault", "ai"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
rmcp = { version = "2.2", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.6", features = ["derive"] }
similar = "3"
thiserror = "2.0"
anyhow = "1"
serde_json = "1"
dirs = "6"
dialoguer = "0.12"
console = "0.16"
toml_edit = "0.25"
ignore = "0.4"
rayon = "1"
# Maintained serde-yaml fork, aliased as `serde_yml` in code. Replaces the
# previous `serde_yml`/`libyml` crates, both RustSec-flagged unmaintained +
# unsound (RUSTSEC-2025-0067/0068).
serde_yml = { package = "serde_yaml_ng", version = "0.10" }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "vault_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
